--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -88,8 +88,7 @@
             "program": "${workspaceRoot}/manage.py",
             "cwd": "${workspaceRoot}",
             "args": [
-                "runserver",
-                "--noreload"
+                "runserver"
             ],
             "debugOptions": [
                 "WaitOnAbnormalExit",
