--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -88,7 +88,8 @@
             "program": "${workspaceRoot}/manage.py",
             "cwd": "${workspaceRoot}",
             "args": [
-                "runserver"
+                "runserver",
+                "--noreload"
             ],
             "debugOptions": [
                 "WaitOnAbnormalExit",
